--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                                         <em>Proceedings of the 20th ACM Conference on Embedded Networked Sensor Systems</em>
                                         <br><b>ACM SenSys 2022</b>
                                         <br>
-                                        <a href="https://arxiv.org/abs/2301.11956">paper</a>  / 
-                                        <a href="https://github.com/Chen-Cai-OSU/MPNN-GT-Connection/">code</a> 
+                                        <a href="papers/SenSys'22_SVoice.pdf">Paper</a>  / 
+                                        <a href="slides/SenSys'22_SVoice.pptx">Slides</a> 
                                     </p>
                                    
                                     
