--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                             Research Intern, Microsoft Research Asia, advised by Lili Qiu 2022.12-2023.09
                                             <em>
                                             <br><span class="special-text"> -> Design and build an acoustic imaging system using compressive sensing and metasurface.</span>
-                                            <br><span class="special-text"> -> Demo to Mr. Bill Gates, Dr. Peter Lee and MSRA 25th anniversary event in person.</span>
+                                            <br><span class="special-text"> -> Demo to Mr. Bill Gates, Dr. John Hopcroft, Dr. Peter Lee and MSRA 25th anniversary event in person.</span>
                             
                                             </em>
                                             
