--- a/index.html
+++ b/index.html
@@ -106,28 +106,28 @@
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <heading>Publications</heading> (&#42; equal contribution)
 
-                                   <!-- <p>
-                                        <a href="https://dl.acm.org/doi/abs/10.1145/3560905.3568530" target="_blank"><papertitle>Pushing Wireless Charging from Station to Travel </papertitle></a>
+                                   <p>
+                                        <a href="" target="_blank"><papertitle>Pushing Wireless Charging from Station to Travel </papertitle></a>
                                         <br>
                                        Lili Chen,&nbsp
                                        Bozhong Yu,&nbsp
-                                       <strong>Yongjian Fu</strong>,&nbsp
+                                       <u><b>Yongjian Fu</b></u>,&nbsp
                                         Ju Ren,&nbsp
                                         Hao Pan,&nbsp
                                         Jeremy Gummeson, &nbsp
                                         and Yaoxue Zhang
                                         <br>
                                         <em>Proceedings of the 30th Annual International Conference On Mobile Computing And Networking </em>
-                                        <br><b>ACM Mobicom 2024</b>
+                                       <br><b>ACM Mobicom 2024</b> (conditionally accepted)
                                         <br>
-                                        <a href="https://arxiv.org/abs/2301.11956">paper</a>  / 
-                                        <a href="https://github.com/Chen-Cai-OSU/MPNN-GT-Connection/">code</a> 
-                                    </p> -->
+                                        <a href="">Paper</a>  / 
+                                        <a href="">Slides</a> 
+                                    </p> 
 
                                     <p>
                                         <a href="https://dl.acm.org/doi/abs/10.1145/3560905.3568530" target="_blank"><papertitle>SVoice: Enabling Voice Communication in Silence via Acoustic Sensing on Commodity Devices</papertitle></a>
                                         <br>
-                                        <strong>Yongjian Fu</strong>,&nbsp
+                                        <u><b>Yongjian Fu</b></u>,&nbsp
                                        Shuning Wang,&nbsp
                                        Linghui Zhong,&nbsp
                                         Lili Chen,&nbsp
