--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                         <a href="slides/SenSys'22_SVoice.pptx">Slides</a> /
                                         <a href="https://www.youtube.com/watch?v=NMuO00bVMko&t=18s">Video</a> /
                                         <a href="#" onclick="toggleBibtex('SVoice'); return false;">Cite</a>
-                                           <!-- Ref -->
+                                           <!-- 
                                         <div id="SVoice" class="bibtex-entry">
                                             @inproceedings{fu2022svoice,
                                                 title={SVoice: Enabling Voice Communication in Silence via Acoustic Sensing on Commodity Devices},
@@ -151,7 +151,7 @@
                                                 pages={622--636},
                                                 year={2022}
                                             }
-                                        </div>
+                                        </div> -->
 
                                     
 
