--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
                         </tbody>
                     </table>
 
+                    <div align="center" width="56">
                     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=K2uL_pg5dq0nrLt9Jft5nWeCfprhbQmmqn6ooaI5Pyg&cl=ffffff&w=a"></script>
-            
+                    </div>
 
                     <div align="center" width="256">
                     <a href="https://www.easycounter.com/">
