--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
                                         News
                                     </heading>
                                     <p><em>
-                               
-                                    [Nov. 2023]<span class="red-bold-text"> New!</span>  Our work <b>ChargX</b> was conditionally accepted by <b>ACM Mobicom 2024</b>. See you in Washington D.C.!
+                                    [Dec. 2023]<span class="red-bold-text"> New!</span>  Invited to be the reviewer for IEEE JSAC!
                                     <br>
-                                    [Nov. 2023]<span class="red-bold-text"> New!</span> I will start a research internship at <b>UCSD</b> as a visiting student from Mar. 2024!
+                                    [Nov. 2023]<span class="red-bold-text"> New!</span>  Our work <b>ChargeX</b> was conditionally accepted by <b>ACM Mobicom 2024</b>. See you in Washington D.C.!
+                                    <br>
+                                    [Nov. 2023] I will start a research internship at <b>UCSD</b> as a visiting student from Mar. 2024!
                                     <br> 
                                         [Sep. 2023] I have finished a wonderful internship at <b>Microsoft Research Asia</b>! 
                                     <br>     
@@ -197,7 +198,10 @@
                                     <ul>
                                         
                                         <li>
-                                            Reivewer for IEEE TMC
+                                            Reivewer, IEEE Transactions on Mobile Computing
+                                        </li>
+                                        <li>
+                                            Reivewer, IEEE Journal on Selected Areas in Communications
                                         </li>
                                     </ul>
                                 </td>
@@ -226,7 +230,7 @@
                                         <br>
                                         <br>
                                         <div style="float:left;">
-                                            Updated at Nov. 2023
+                                            Updated at Dec. 2023
                                         </div>
                                         <div style="float:right;">
                                             Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing work
