--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <heading>Conference Publications</heading> (&#42; equal contribution)
 
                                    <p>
-                                        [C2] <a href="" target="_blank"><papertitle>Pushing Wireless Charging from Station to Travel </papertitle></a>
+                                        <b>[C2]</b> <a href="" target="_blank"><papertitle>Pushing Wireless Charging from Station to Travel </papertitle></a>
                                         <br>
                                        Lili Chen,&nbsp
                                        Bozhong Yu,&nbsp
@@ -129,7 +129,7 @@
                                     </p> 
 
                                     <p>
-                                        [C1] <a href="https://dl.acm.org/doi/abs/10.1145/3560905.3568530" target="_blank"><papertitle>SVoice: Enabling Voice Communication in Silence via Acoustic Sensing on Commodity Devices</papertitle></a>
+                                        <b>[C1]</b> <a href="https://dl.acm.org/doi/abs/10.1145/3560905.3568530" target="_blank"><papertitle>SVoice: Enabling Voice Communication in Silence via Acoustic Sensing on Commodity Devices</papertitle></a>
                                         <br>
                                         <u><b>Yongjian Fu</b></u>,&nbsp
                                        Shuning Wang,&nbsp
@@ -175,7 +175,7 @@
                                     <heading>Journal Publications</heading>
 
                                    <p>
-                                        [J1] <a href="" target="_blank"><papertitle>UFace: Your Smartphone Can "Hear" Your Facial Expression! </papertitle></a>
+                                        <b>[J1]</b> <a href="" target="_blank"><papertitle>UFace: Your Smartphone Can "Hear" Your Facial Expression! </papertitle></a>
                                         <br>
                                        Shuning Wang,&nbsp
                                        Linghui Zhong,&nbsp
