--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                                        
                                     
                                         <li>
-                                            Research Intern, Tsinghua University, mentor: <b>Prof. Ju Ren</b>, 2021.09-now
+                                            Research Intern, <b>Tsinghua University</b>, mentor: <b>Prof. Ju Ren</b>, 2021.09-now
                                         </li>
                                         <li>
-                                            Research Intern, Microsoft Research Asia, mentor: <b>Prof. Lili Qiu</b>, 2022.12-2023.09
+                                            Research Intern, <b>Microsoft Research Asia</b>, mentor: <b>Prof. Lili Qiu</b>, 2022.12-2023.09
                                             <em>
                                             <br><span class="special-text"> -> Design and build an acoustic imaging system using a passive metasurface.</span>
                                             <br><span class="special-text"> -> Demo to Mr. Bill Gates, Dr. John Hopcroft, Dr. Peter Lee and MSRA 25th anniversary event in person.</span>
