--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         and Yaoxue Zhang
                                         <br>
                                         <em>Proceedings of the 30th Annual International Conference On Mobile Computing And Networking </em>
-                                       <br><b>ACM Mobicom 2024</b> (conditionally accepted)
+                                       <br><b>To appear at ACM Mobicom 2024</b>, Washington, USA, September 2024
                                         <br>
                                         <a href="#">Paper</a>  / 
                                         <a href="#">Slides</a> /
@@ -139,7 +139,7 @@
                                         and Yaoxue Zhang
                                         <br>
                                         <em>Proceedings of the 20th ACM Conference on Embedded Networked Sensor Systems</em>
-                                        <br><b>ACM SenSys 2022</b>
+                                        <br><b>ACM SenSys 2022</b>, Boston, USA, November 2022
                                         <br>
                                         <a href="papers/SenSys'22_SVoice.pdf">Paper</a>  / 
                                         <a href="slides/SenSys'22_SVoice.pptx">Slides</a> /
