--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                         News
                                     </heading>
                                     <p><em>
-                                    [Dec. 2023]<span class="red-bold-text"> New!</span>  Our work <b>UFace</b> was accepted by <b>ACM IMWUT 2024</b>!
+                                    [Dec. 2023]<span class="red-bold-text"> New!</span>  Our work <b>UFace</b> was accepted by <b>ACM IMWUT/Ubicomp 2024</b>!
                                     <br> 
                                     [Dec. 2023]<span class="red-bold-text"> New!</span>  Invited to be the reviewer for <b>IEEE JSAC</b>!
                                     <br>
@@ -185,7 +185,7 @@
                                         and Yaoxue Zhang
                                         <br>
                                         <em>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies </em>
-                                       <br><b>ACM IMWUT 2024</b>
+                                       <br><b>ACM IMWUT/Ubicomp 2024</b>, Melbourne, Australia, October 2024
                                         <br>
                                         <a href="#">Paper</a>  / 
                                         <a href="#">Slides</a> /
