--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Yongjian Fu</title>
 
-    <meta name="author" content="Yongjian Fu">
+    <meta name="author" content="Xinyi Li">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -24,15 +24,16 @@
                                 <td style="padding:2.7%;width:75%;vertical-align:middle">
                                     <p style="text-align:center">
                                         <!--  -->
-                                        <name>Yongjian Fu「付永健」</name> 
+                                        <name>Xinyi Li「李欣怡」</name> 
                                     </p>
                                     <p>
-                                        I am a Ph.D. candidate in the CSE department at the Central South University, advised by <a href="https://www.cs.tsinghua.edu.cn/csen/info/1059/4004.htm" target="_blank">Prof. Yaoxue Zhang</a> and <a href="https://juren1987.github.io/" target="_blank">Prof. Ju Ren</a>.
+                                        I received my PHD degree in 2023 from Northwest University, under supervisor of Prof. Xiaojiang Chen. 
+                                        <!-- I am a Ph.D. candidate in the CSE department at the Central South University, advised by <a href="https://www.cs.tsinghua.edu.cn/csen/info/1059/4004.htm" target="_blank">Prof. Yaoxue Zhang</a> and <a href="https://juren1987.github.io/" target="_blank">Prof. Ju Ren</a>.
                                         <!-- Previously, I obtained my master's degree in Applied Mathematics from Stony Brook University, where <a href="http://www.ams.sunysb.edu/~jsbm/jsbm.html" target="_blank">Prof. Joseph Mitchell</a> and <a href="https://www3.cs.stonybrook.edu/~jgao/" target="_blank">Prof. Jie Gao</a> introduced me to computational geometry and differential privacy.  -->
                                         <!-- My advisor is <a href="https://jian-tang.com" target="_blank">Jian Tang</a>, and I also collaborate closely with <a href="https://yoshuabengio.org/" target="_blank">Yoshua Bengio</a> and <a href="https://gomezbombarelli.mit.edu/rafa" target="_blank">Rafael Gómez-Bombarelli</a>. -->
                                         <!-- , <a href="https://cs.stanford.edu/~ermon/" target="_blank">Stefano Ermon</a>, -->
                                     <!-- <br> -->
-                                        Prior to that, I received my bachelor degree from <a href="https://en.csu.edu.cn/" target="_blank">Central South University</a> in 2021. 
+                                        <!-- Prior to that, I received my bachelor degree from <a href="https://en.csu.edu.cn/" target="_blank">Central South University</a> in 2021. 
                                         <!-- , where I worked with <a href="https://lileicc.github.io/" target="_blank">Lei Li</a> and <a href="http://wnzhang.net/" target="_blank">Weinan Zhang</a>. -->
                                         <!-- , <a href="http://www.davidwipf.com/" target="_blank">David Wipf</a>,  -->
                                     <!-- <p>
@@ -48,7 +49,7 @@
                                             Google Scholar</a> &nbsp&nbsp/&nbsp&nbsp 
                                         <a href="cv/YongjianFu.pdf" target="_blank">
                                             Resume</a> &nbsp&nbsp/&nbsp&nbsp
-                                        <a href="https://github.com/fuyongjian" target="_blank">
+                                        <a href="https://github.com/XinyiLiDO" target="_blank">
                                             Github</a> &nbsp&nbsp&nbsp&nbsp
                                         <!--<a href="https://www.linkedin.com/in/chen-cai-06141166/" target="_blank">
                                             LinkedIn</a> &nbsp&nbsp&nbsp&nbsp-->
@@ -69,7 +70,7 @@
                                         Research Topics
                                     </heading>
                                     <p>
-                                        My general research area is mobile computing, with an emphasis on <b>Wireless Sensing</b> and <b>Machine Learning</b>. I'm devoted to developing effective mobile system for real-world problems.
+                                        My research focuses on wireless sensing and wireless networking. 
                                         
                                         </ul>
                                     </p>
