--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Yongjian Fu</title>
+    <title>Xinyi Li</title>
 
     <meta name="author" content="Xinyi Li">
     <meta name="viewport" content="width=device-width, initial-scale=1">
