--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     </p>
                                 </td>
                                 <td style="padding:3%;width:40%;max-width:40%">
-                                    <a href="images/self-crop.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/self-crop.jpg" class="hoverZoomLink"></a>
+                                    <a href="images/XinyiLI.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/XinyiLI.jpg" class="hoverZoomLink"></a>
                                 </td>
                             </tr>
                         </tbody>
