--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                         <name>Xinyi Li「李欣怡」</name> 
                                     </p>
                                     <p>
-                                        I received my PHD degree in 2023 from Northwest University, under supervisor of Prof. Xiaojiang Chen. 
+                                        I received my PHD degree in 2023 from Northwest University, under supervisor of Prof. Xiaojiang Chen. I am currently a postdoctoral fellow in the Department of Computer Science and Technology at Tsinghua University. 
                                         <!-- I am a Ph.D. candidate in the CSE department at the Central South University, advised by <a href="https://www.cs.tsinghua.edu.cn/csen/info/1059/4004.htm" target="_blank">Prof. Yaoxue Zhang</a> and <a href="https://juren1987.github.io/" target="_blank">Prof. Ju Ren</a>.
                                         <!-- Previously, I obtained my master's degree in Applied Mathematics from Stony Brook University, where <a href="http://www.ams.sunysb.edu/~jsbm/jsbm.html" target="_blank">Prof. Joseph Mitchell</a> and <a href="https://www3.cs.stonybrook.edu/~jgao/" target="_blank">Prof. Jie Gao</a> introduced me to computational geometry and differential privacy.  -->
                                         <!-- My advisor is <a href="https://jian-tang.com" target="_blank">Jian Tang</a>, and I also collaborate closely with <a href="https://yoshuabengio.org/" target="_blank">Yoshua Bengio</a> and <a href="https://gomezbombarelli.mit.edu/rafa" target="_blank">Rafael Gómez-Bombarelli</a>. -->
@@ -43,14 +43,14 @@
                                         
                                     </p>
                                     <p style="text-align:left">
-                                        <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=fuyongjian@csu.edu.cn" target="_blank">
-                                            Email</a> &nbsp&nbsp/&nbsp&nbsp 
-                                        <a href="https://scholar.google.com/citations?user=jEYrQfkAAAAJ&hl=en&oi=sra" target="_blank">
-                                            Google Scholar</a> &nbsp&nbsp/&nbsp&nbsp 
-                                        <a href="cv/YongjianFu.pdf" target="_blank">
-                                            Resume</a> &nbsp&nbsp/&nbsp&nbsp
-                                        <a href="https://github.com/XinyiLiDO" target="_blank">
-                                            Github</a> &nbsp&nbsp&nbsp&nbsp
+                                        <!-- <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=fuyongjian@csu.edu.cn" target="_blank">
+                                            <!-- Email</a> &nbsp&nbsp/&nbsp&nbsp 
+                                        <!-- <a href="https://scholar.google.com/citations?user=jEYrQfkAAAAJ&hl=en&oi=sra" target="_blank">
+                                            <!-- Google Scholar</a> &nbsp&nbsp/&nbsp&nbsp 
+                                        <!-- <a href="cv/XinyiLi.pdf" target="_blank">
+                                           <!--  Resume</a> &nbsp&nbsp/&nbsp&nbsp
+                                        <!-- <a href="https://github.com/XinyiLiDO" target="_blank">
+                                           <!--  Github</a> &nbsp&nbsp&nbsp&nbsp
                                         <!--<a href="https://www.linkedin.com/in/chen-cai-06141166/" target="_blank">
                                             LinkedIn</a> &nbsp&nbsp&nbsp&nbsp-->
                                     </p>
