--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                                     <p style="text-align:left">
                                         <!-- <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=fuyongjian@csu.edu.cn" target="_blank">
                                             <!-- Email</a> &nbsp&nbsp/&nbsp&nbsp 
-                                        <!-- <a href="https://scholar.google.com/citations?user=jEYrQfkAAAAJ&hl=en&oi=sra" target="_blank">
-                                            <!-- Google Scholar</a> &nbsp&nbsp/&nbsp&nbsp 
+                                        <a href="https://scholar.google.com/citations?hl=zh-CN&user=PPHsWksAAAAJ" target="_blank">
+                                            Google Scholar</a> &nbsp&nbsp/&nbsp&nbsp 
                                         <!-- <a href="cv/XinyiLi.pdf" target="_blank">
                                            <!--  Resume</a> &nbsp&nbsp/&nbsp&nbsp
                                         <!-- <a href="https://github.com/XinyiLiDO" target="_blank">
