--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                    <p>
                                         <b>[C3]</b> <a href="https://www.usenix.org/conference/nsdi23/presentation/li-xinyi" target="_blank"><papertitle>RF-Bouncer: A Programmable Dual-band Metasurface for Sub-6 Wireless Networks</papertitle></a>
                                         <br>
-                                        <u><b>Xinyi Li</b></u>,&nbsp                                       
-                                        Chao Feng,&nbsp
+                                        <u><b>Xinyi Li </b></u>, &#42 &nbsp                                       
+                                        Chao Feng &#42,&nbsp
                                         Xiaojing Wang,&nbsp
                                         Yangfan Zhang,&nbsp
                                         Yaxiong Xie,&nbsp
