--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                    <p>
                                         <b>[C3]</b> <a href="https://www.usenix.org/conference/nsdi23/presentation/li-xinyi" target="_blank"><papertitle>RF-Bouncer: A Programmable Dual-band Metasurface for Sub-6 Wireless Networks</papertitle></a>
                                         <br>
-                                        <u><b>Xinyi Li </b></u>,&#42; &nbsp                                       
-                                        Chao Feng &#42;,&nbsp
+                                        <u><b>Xinyi Li&#42;</b></u>,&nbsp                                       
+                                        Chao Feng&#42;,&nbsp
                                         Xiaojing Wang,&nbsp
                                         Yangfan Zhang,&nbsp
                                         Yaxiong Xie,&nbsp
@@ -151,8 +151,8 @@
                                    <p>
                                         <b>[C2]</b> <a href="https://dl.acm.org/doi/abs/10.1145/3495243.3560547" target="_blank"><papertitle>Protego: Securing wireless communication via programmable metasurface</papertitle></a>
                                         <br>
-                                        <u><b>Xinyi Li</b></u>,&nbsp                                       
-                                        Chao Feng,&nbsp
+                                        <u><b>Xinyi Li&#42;</b></u>,&nbsp                                       
+                                        Chao Feng&#42;,&nbsp
                                         Fengyi Song,&nbsp
                                         Chenghan Jiang,&nbsp
                                         Yangfan Zhang,&nbsp
@@ -182,8 +182,8 @@
                                    <p>
                                         <b>[C1]</b> <a href="https://dl.acm.org/doi/abs/10.1145/3447993.3483238" target="_blank"><papertitle>RFlens: Metasurface-Enabled Beamforming for IoT Communication and Sensing</papertitle></a>
                                         <br>
-                                        Chao Feng,&nbsp
-                                        <u><b>Xinyi Li</b></u>,&nbsp
+                                        Chao Feng&#42;,&nbsp
+                                        <u><b>Xinyi Li&#42;</b></u>,&nbsp
                                         Yanfan Zhang,&nbsp
                                         Jingxiao Wang,&nbsp
                                         Liqiong Chang,&nbsp
