--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                      </div>
                         
 
-                    <div align="center" width="256">
+                    <div align="center" width="128">
                     <a href="https://www.easycounter.com/">
                         <img src="https://www.easycounter.com/counter.php?xinyilido"
                         border="0" alt="Hit Counter"></a>
-                        <br><a href="https://www.easycounter.com/">Web Site Hit Counters</a>
+                        <br><a href="https://www.easycounter.com/">Total Visitors</a>
                     </div>
                         
 
