--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                                         News
                                     </heading>
                                     <p><em>
-                                    [Nov. 2023] <span class="red-bold-text"> New!</span> Our work <b>RFMagus</b> was conditionally accepted by <b>ACM Mobicom 2024</b>. See you in Washington D.C.!
+                                    [Apr. 2024] <span class="red-bold-text"> New!</span> Our work <b>MetaAng</b> is accepted by <b>ACM IMWUT/Ubicomp 2024</b>. 
+                                    <br>
+                                    </em></p>
+                                    <p><em>
+                                    [Nov. 2023] Our work <b>RFMagus</b> is conditionally accepted by <b>ACM Mobicom 2024</b>. See you in Washington D.C.!
                                     <br>
                                     </em></p>
                                 </td>
