--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <heading>Conference Publications</heading> (&#42; equal contribution)
+                                    <p>
+                                        <b>[C4]</b> <a href="" target="_blank"><papertitle>Pushing the Limits of Acoustic Spatial Perception via Incident Angle Encoding </papertitle></a>
+                                        <br>
+                                        Yongjian Fu,&nbsp
+                                        Yongzhao Zhang,&nbsp
+                                        Hao Pan,&nbsp
+                                        Yu Lu,&nbsp
+                                        <u><b>Xinyi Li</b></u>,&nbsp
+                                        Lili Chen,&nbsp
+                                        Ju Ren,&nbsp
+                                        Xiong Li,&nbsp
+                                        Xiaosong Zhang,&nbsp
+                                        and Yaoxue Zhang
+                                        <br>
+                                        <em>Proceedings of the 30th Annual International Conference On Mobile Computing And Networking </em>
+                                        <br><b>ACM IMWUT/Ubicomp 2024</b>, Melbourne, Australia, October 2024
+                                        <br>
+                                        <a href="#">Paper</a>  / 
+                                        <a href="#">Slides</a> /
+                                        <a href="#">Cite</a>
+                                   </p> 
 
                                    <p>
                                         <b>[C4]</b> <a href="" target="_blank"><papertitle>RFMagus: Programming the Radio Environment With Networked Metasurfaces </papertitle></a>
