--- a/index.html
+++ b/index.html
@@ -136,9 +136,20 @@
                                         <em>Proceedings of the 30th Annual International Conference On Mobile Computing And Networking </em>
                                         <br><b>To appear at ACM Mobicom 2024</b>, Washington, USA, September 2024
                                         <br>
-                                        <a href="#">Paper</a>  / 
-                                        <a href="#">Slides</a> /
-                                        <a href="#">Cite</a>
+                                        <a href="papers/Li et al. - 2024 - RFMagus Programming the Radio Environment With Ne.pdf">Paper</a>  / 
+                                        <a href="#" onclick="toggleBibtex('RFMagus'); return false;">Cite</a>
+                                        <div id="RFMagus" class="bibtex-entry">
+                                            @inproceedings{li2024rfmagus,
+                                               title={RFMagus: Programming the Radio Environment With Networked Metasurfaces},
+                                               author={Li, Xinyi and Zhao, Gaoteng and Chen, Ling and Zhang, Xinyu and Ren, Ju},
+                                               booktitle={Proceedings of the 30th Annual International Conference on Mobile Computing and Networking},
+                                               pages={16--30},
+                                               year={2024}
+                                             }
+                                            }
+                                        </div>
+
+
                                     </p> 
 
                                     
