--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         and Ju Ren
                                         <br>
                                         <em>Proceedings of the 30th Annual International Conference On Mobile Computing And Networking </em>
-                                        <br><b>To appear at ACM Mobicom 2024</b>, Washington, USA, September 2024
+                                        <br><b>To appear at ACM Mobicom 2024</b>, Washington, USA, September 2024, AR=103/494
                                         <br>
                                         <a href="papers/Li et al. - 2024 - RFMagus Programming the Radio Environment With Ne.pdf">Paper</a>  / 
                                         <a href="#" onclick="toggleBibtex('RFMagus'); return false;">Cite</a>
