--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <heading>Conference Publications</heading> (&#42; equal contribution)
                                     <p>
-                                        <b>[C5]</b> <a href="" target="_blank"><papertitle>RFSiren: Stealth Attacks to Wireless Sensing System </papertitle></a>
+                                        <b>[C5]</b> <a href="" target="_blank"><papertitle>RISiren: Wireless Sensing System Attacks via Metasurface </papertitle></a>
                                         <br>
                                         Chenghan Jiang,&nbsp
                                         Jinjiang Yang,&nbsp
