--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     </p> 
                                    <p>
                                        
-                                        <b>[C4]</b> <a href="" target="_blank"><papertitle>RFMagus: Programming the Radio Environment With Networked Metasurfaces </papertitle></a>
+                                        <b>[C4]</b> <a href="https://dl.acm.org/doi/abs/10.1145/3636534.3649344" target="_blank"><papertitle>RFMagus: Programming the Radio Environment With Networked Metasurfaces </papertitle></a>
                                         <br>
                                         <u><b>Xinyi Li</b></u>,&nbsp
                                         Gaoteng Zhao,&nbsp
