--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         News
                                     </heading>
                                     <p><em>
-                                    [Aug 2024] <span class="red-bold-text"> New!</span> Our work <b>RFSiren</b> is accepted by <b>ACM CCS2024</b>. 
+                                    [Aug 2024] <span class="red-bold-text"> New!</span> Our work <b>RISiren</b> is accepted by <b>ACM CCS2024</b>. 
                                     <br>
                                     </em></p>
                                     <p><em>
@@ -349,6 +349,10 @@
                                         
                                         <li>
                                             Reivewer, IEEE Transactions on Mobile Computing
+                                            Reivewer, ACM Transactions on Internet of Things
+                                            TPC, 2024 MSN 
+                                            TPC, 2024 UIC
+                                            TPC, 2024 NPC
                                         </li>
                                     </ul>
                                 </td>
