--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                                         News
                                     </heading>
                                     <p><em>
-                                    [Aug 2024] <span class="red-bold-text"> New!</span> Our work <b>RISiren</b> is accepted by <b>ACM CCS2024</b>. 
+                                    [Mar 2025] <span class="red-bold-text"> New!</span> Our work <b>MASA</b> is accepted by <b>IEEE TMC</b>. 
+                                    <br>
+                                    </em></p>
+                                    <p><em>
+                                    [Aug 2024] Our work <b>RISiren</b> is accepted by <b>ACM CCS2024</b>. 
                                     <br>
                                     </em></p>
                                     <p><em>
