--- a/index.html
+++ b/index.html
@@ -278,6 +278,26 @@
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <heading>Journal Publications</heading>
+                                    <p>
+                                        <b>[J4]</b> <a href="" target="_blank"><papertitle>MASA: Multimodal Federated Learning through Modality-Aware and Secure Aggregation</papertitle></a>
+                                        <br>
+                                        Jialin Guo,&nbsp
+                                        Yongjian Fu,&nbsp
+                                        Zhiwei Zhai,&nbsp
+                                        <u><b>Xinyi Li</b></u>,&nbsp
+                                        Yongheng Deng,&nbsp
+                                        Sheng Yue,&nbsp
+                                        Lili Chen,&nbsp
+                                        Hao Pan,&nbsp
+                                        and Ju Ren
+                                        <br>  
+                                        <em>IEEE Transactions on Mobile Computing</em>
+                                        <br><b>IEEE TMC 2025</b>, 
+                                        <br>
+                                        <a href="#">Paper</a>  / 
+                                        <a href="#">Slides</a> /
+                                        <a href="#">Cite</a>
+                                   </p> 
 
                                         
                                     <p>
